@@ -2,7 +2,7 @@ import java.text.SimpleDateFormat
 
 buildscript {
     ext {
-        arcVersion =  'v157.1'  // https://github.com/Anuken/Arc
+        arcVersion = 'v157.1'  // https://github.com/Anuken/Arc
     }
     
     repositories {
@@ -37,15 +37,67 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = JavaVersion.VERSION_17
+        options.encoding = "UTF-8"
+        options.compilerArgs += ["-Xlint:deprecation"]
+
+        options.forkOptions.jvmArgs += [
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ]
+    }
 }
+
+configure(project(":annotation")){
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 8
+        options.fork = true
+    }
+}
+
+configure(project(":tools")){
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 8
+        options.fork = true
+    }
+}
+
+
+//工具和注解模块使用纯java8()
+configure(subprojects - project(":annotation") - project(":tools")){
+    tasks.withType(JavaCompile){
+        options.compilerArgs.addAll(['--release', '8'])
+    }
+
+    tasks.withType(Javadoc){
+        options{
+            addStringOption('Xdoclint:none', '-quiet')
+            addStringOption('-release', '17')
+            encoding('UTF-8')
+        }
+    }
+}
+
 
 project(":desktop") {
     apply plugin: "java"
 
-    //compileJava.options.fork = true
+    compileJava.options.fork = true
 
     dependencies {
         implementation project(":core")
+        
+        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
         
         implementation "com.github.Anuken.Arc:natives-desktop:$arcVersion"
         implementation "com.github.Anuken.Arc:natives-freetype-desktop:$arcVersion"
@@ -53,16 +105,26 @@ project(":desktop") {
     }
 }
 
+project(":annotation") {
+    apply plugin: "java"
+    dependencies {
+        implementation project(":tools")
+        annotationProcessor project(":tools")
+        implementation 'com.squareup:javapoet:1.12.1'
+        implementation "com.github.Anuken.Arc:arc-core:$arcVersion"
+    }
+}
+
 project(":core") {
     apply plugin: "java-library"
-    
-    compileJava {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
-    }
-    
+    compileJava.options.fork = true
     dependencies {
-        // 全平台逻辑
+        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
+        
+        compileOnly project(":annotation")
+        annotationProcessor project(":annotation")
+        
+        // 这是啥来着
         api "org.lz4:lz4-java:1.8.0"
         
         // Arc
@@ -73,7 +135,6 @@ project(":core") {
         api "com.github.Anuken.Arc:fx:$arcVersion"
         api "com.github.Anuken.Arc:arcnet:$arcVersion"
         api "com.github.Anuken.Arc:filedialogs:$arcVersion"
-        
     }
 }
 
